# rm_uav_master

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.uav  Dockerfile.uav.build  HANDOVER.md  README.md  docker-compose.dev.yml  mavros.md  paras_setting.md
.github/workflows/: README.md  docker-build.yml
dockerfiles/: mavros-patch.diff
docs/: ARM64_BUILD.md  AUTOSTART.md  ODIN_INTEGRATION_TEST.md  PX4_ONLY_TEST.md  UAV_DEPLOY.md  how_to_use.md  mavros_install.md
scripts/: _debug_mavlink.py  _test_param.py  build_arm64.sh  build_install.sh  build_multiarch.sh  build_native.sh  check_px4_link.sh  deploy_to_drone.sh  ensure_pymavlink.sh  fake_odin_motion.py  health_led.py  launch_odin.sh  launch_odin_px4.sh  launch_slam.sh  launch_test_with_px4.sh  launch_uav.sh  launch_uav_gui.sh  listen_estimator_status.py  logrotate-uav.conf  measure_follow_rate.py  monitor_layer4.sh  monitor_px4_mavlink.py  monitor_px4_native.sh  px4.launch.py  px4_vision_injector.py  px4_visual_odom_bridge.py  rm_dep-autostart.sh  rm_dep-stop.sh  rm_dep-watchdog.sh  rm_dep.service  set_px4_mavlink.py  set_px4_mavlink.sh  set_px4_params.py  set_px4_params.sh  set_px4_params_via_mavlink.sh  set_px4_safe.sh  set_px4_via_mavros.py  start_uav_container.sh  start_uav_gui.sh  stop_and_go_fake_odom.py  (+6 more)
scripts/udev/: 99-livox.rules  99-odin.rules
src/fast_lio/config/: mid360.yaml
src/slam_to_mavros/: package.xml  setup.cfg  setup.py
src/slam_to_mavros/config/: slam_to_mavros.yaml
src/slam_to_mavros/launch/: odin_px4_full.launch.py  slam_to_mavros.launch.py
src/slam_to_mavros/slam_to_mavros/: __init__.py  fake_odom_publisher.py  slam_to_mavros_node.py  slam_to_mavros_node.py.bak
src/slam_to_mavros/test/: test_flake8.py  test_pep257.py
tests/: test_endpoints.sh  test_smoke.sh  test_symlink.sh
(+2 files in other folders)
